# cpu-raytracer

./: .gitignore  CMakeLists.txt  README.md  build-run.sh  build.sh  debug-build-run.sh
assets/CornellBoxRGK/: CornellBox-Sphere.mtl
assets/conference/: conference.mtl
demos/: breakfast_room.sh  cornell-box.sh  cornell-embree-current.exr  cornell_render-np1-nl64.exr  cornell_render-np256-nl1.exr  cornell_render-np256-nl4.exr  cornell_render-np8-nl64.exr  sponza.sh
src/: LivePreview.cpp  main.cpp
src/Core/Buffer2D/: Buffer2D.hpp
src/Core/Color/: Color.cpp  Color.hpp
src/Core/FloatColor/: FloatColor.cpp  FloatColor.hpp
src/Core/Fragment/: Fragment.hpp
src/Core/Postprocessing/: SimpleDenoiser.cpp  SimpleDenoisser.hpp
src/Core/Raytracing/: Raytracing.hpp
src/Core/Raytracing/AbstractRayTracingEngine/: AbstractRayTracingEngine.cpp  AbstractRayTracingEngine.hpp
src/Core/Raytracing/BasicRayTracer/: BasicRayTracer.cpp  BasicRayTracer.hpp
src/Core/Raytracing/EmbreeRayTracingEngine/: EmbreeRayTracingEngine.cpp  EmbreeRayTracingEngine.hpp
src/Core/Raytracing/HavranKDTreeRayTracingEngine/: HavranKDTreeRayTracingEngine.cpp  HavranKDTreeRayTracingEngine.hpp  HavranTree.hpp
src/Core/Raytracing/Ray/: Ray.cpp  Ray.hpp
src/Core/Raytracing/RayHit/: RayHit.hpp
src/Core/Scene/: Scene.cpp  Scene.hpp
src/Core/Scene/Camera/: Camera.cpp  Camera.hpp
src/Core/Scene/Material/: Material.hpp
src/Core/Scene/Mesh/: Mesh.cpp  Mesh.hpp
src/Core/Scene/SceneLoader/: SceneLoader.cpp  SceneLoader.hpp
src/Core/Scene/Texture/: Texture.cpp  Texture.hpp
src/Demo/: Demo.cpp  Demo.hpp
src/Infrastructure/ImageWriter/: ImageWriter.cpp  ImageWriter.hpp
src/Infrastructure/LivePreview/: LivePreview.cpp  LivePreview.hpp
src/Infrastructure/Logger/: Logger.hpp
src/Misc/Math/: Math.cpp  Math.hpp
src/Misc/Sobol/: SobolSampler.hpp
src/stb/: stb.cpp  stb.hpp
(+9 files in other folders)
